add: update home-1

--- a/libs/jade/dev/site/home-1.jade
+++ b/libs/jade/dev/site/home-1.jade
@@ -13,19 +13,33 @@ block content
 				.home__content
 					.flex-container.flex-row
 						.col-md-6.col-sm-12
-							.blog-lead
-								.blog-name
-									p Latest Blog
-									h3 #[a(href="#") Payday loans: An improved market? ]
-								//img(src="../../images/sample-blog/adviser-needs.jpg" alt="Blog image" style="width:100%;")
-								p(style="font-size:1rem;") Since the Financial Conduct Authority (FCA) took over the regulation of the consumer credit sector the payday loan market has undergone a wave of changes.
+							h2 Latest Updates
+							.flex-container.flex-row
+									.col-md-6.col-sm-12
+										.blog-lead
+											.blog-name
+												p Staff News
+												h3 #[a(href="#") RideLondon-Surrey100 Cycle 2016 ]
+											img(src="../../images/intranet/Pru100-600x400px.png" alt="Image of cyclists" style="width:100%;")
+											p(style="font-size:1rem;") Citizens Advice is looking for 22 committed and enthusiastic cyclists to join our team to take part in the Prudential RideLondon-Surrey 100 on Sunday 31 July 2016.
+									.col-md-6.col-sm-12
+										.blog-lead
+											.blog-name
+												p Latest Blog
+												h3 #[a(href="#") What we’ve learnt from the phase 2 PQF pilots ]
+												p Jun 14 2016
+											img(src="../../images/intranet/cropleyl_avatar-75x75.jpg" alt="Blog image" style=" float: left; padding-right: 	1rem;")
+											p(style="font-size:1rem;") Many of you have been helping us to test the elements of the performance and quality framework (PQF), with the new approach to quality of advice assessment (QAA) proving ...
 						.col-md-6.col-sm-12
 							.well(style="background-color:#fff; margin: 1rem;")
 								h3 I want to...
-								a(href="#").blocklink Learn something
+								a(href="#").blocklink Do some training
 								a(href="#").blocklink Find someone
-								a(href="#").blocklink Invoice something
+								a(href="#").blocklink Claim expenses
 								a(href="#").blocklink Get help doing my job
+								a(href="#").blocklink Understand the brand
+								a(href="#").blocklink Know about membership
+								a(href="#").blocklink See what events are happening
 
 
 
@@ -36,18 +50,18 @@ block content
 					.col-md-4.col-sm-12
 						.cards
 							.card-banner-top(style="color:#004b88; background-color:#fff0d3;")
-								p Staff
+								p Do your job
 							.card-text
 								p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
 					.col-md-4.col-sm-12
 						.cards
 							.card-banner-top(style="color:#004b88; background-color:#fff0d3;")
-								p Services
+								p Connect with people
 							.card-text
 								p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
 					.col-md-4.col-sm-12
 						.cards
 							.card-banner-top(style="color:#004b88; background-color:#fff0d3;")
-								p Resources
+								p Get updated
 							.card-text
 								p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
