change: Changed topic sidebar to match homepage

--- a/libs/jade/dev/site/topic.jade
+++ b/libs/jade/dev/site/topic.jade
@@ -63,9 +63,12 @@ block content
 							input#standardField(placeholder="", type="text")
 
 						button.btn.btn-secondary.right-button-icon Search roles
-				.customisable
+				div
 					h3 I want to...
-					a(href="#").blocklink Learn something
+					a(href="#").blocklink Do some training
 					a(href="#").blocklink Find someone
-					a(href="#").blocklink Invoice something
+					a(href="#").blocklink Claim expenses
 					a(href="#").blocklink Get help doing my job
+					a(href="#").blocklink Understand the brand
+					a(href="#").blocklink Know about membership
+					a(href="#").blocklink See what events are happening
