--- a/libs/modules/intranet.less
+++ b/libs/modules/intranet.less
@@ -38,7 +38,7 @@
     }
 }
 
-.customisable button {
+/*.customisable button {
     display: block;
     width: 100%;
     border: .0625rem solid @intranet-light;
@@ -67,4 +67,4 @@
             color: @gray-4;
         }
     }
-}
+}*/
