--- a/libs/template/template-site.jade
+++ b/libs/template/template-site.jade
@@ -66,13 +66,16 @@ html.no-js
 					ul
 						li#org
 							a(href="#")
-								span Staff
+								span Do&nbsp;
+								span your&nbsp;job
 						li#job
 							a(href="#")
-								span Service
+								span Connect&nbsp;
+								span and&nbsp;share
 						li#news
 							a(href="#")
-								span Resources
+								span Get&nbsp;
+								span updated
 						li#search-toggle
 							a(href="#")
 								i.icon-search
@@ -93,79 +96,53 @@ html.no-js
 			.content
 				ul
 					li
-						a(href="group.html") News and events
-						br
-						| Organisational updates and dates for your diary
+						a(href="") Advice
 					li
-						a(href="") Team
-						br
-						| Company structure and individuals contact details
+						a(href="") Brand
 					li
-						a(href="") Job opportunities
-						br
-						| Search roles and opportunities within Citizens Advice
+						a(href="") Campaigns
 					li
-						a(href="") Policies
-						br
-						| Health and safety, Unions, your rights at work
+						a(href="") Equality
+					li
+						a(href="") Finance
+					li
+						a(href="") Learning
+					li
+						a(href="") Membership
+					li
+						a(href="") Offices
+					li
+						a(href="") Talent
+					li
+						a(href="") Strategy
+					li
+						a(href="") Technology
 
 
 		#main-nav-beta--job
 			.content
 				ul
 					li
-						a(href="") External relations
-						br
-						| Contacting goverment and media
+						a(href="") Contacts
 					li
-						a(href="") Brand
-						br
-						| Brand Guidelines and resources
+						a(href="") Our organisation
 					li
-						a(href="") Membership
-						br
-						| Being a Citizens Advice member
+						a(href="") Team profiles
 					li
-						a(href="") Planning
-						br
-						| How to structure your Citizens Advice and create services that work
+						a(href="") People profiles
 					li
-						a(href="") Equality
-						br
-						| Guidance to help you ensure equality and diversity is covered in your business plans
-					li
-						a(href="") Client services
-						br
-						| Our promise to clients
+						a(href="") Share work
 
 		#main-nav-beta--news
 			.content
 				ul
 					li
-						a(href="") Training
-						br
-						| Courses and sessions available
+						a(href="") News
 					li
-						a(href="") Technology
-						br
-						| Software, hardware, what technology is available
+						a(href="") Events
 					li
-						a(href="") Support
-						br
-						| Contact details for personal and technical advice
-					li
-						a(href="") Fundraising
-						br
-						| How to raise money and apply for grants
-					li
-						a(href="") Running local offices
-						br
-						| Documentation and processes for best practice
-					li
-						a(href="") Finance
-						br
-						| Expenses, IPOS, procurement and budgeting
-					
+						a(href="") Blogs
+
 		.main-container
 			nav.main-breadcrumb
 				block breadcrumbs
