change: Updating group.jade sidebar

--- a/libs/jade/dev/site/group.jade
+++ b/libs/jade/dev/site/group.jade
@@ -53,7 +53,7 @@ block content
 
 
 					div.col-sm-4.col-sm-12
-						.blog-sidebar--category(style="background-color:#c2bdde; margin-top: 1.25rem;")
+						//.blog-sidebar--category(style="background-color:#c2bdde; margin-top: 1.25rem;")
 							h2(style="color:#57486b;") Find a specific benefit
 							.dropdown
 								select#exampleSelect1
@@ -86,10 +86,21 @@ block content
 							p of ESA applicants were wrongly placed in mandatory consideration in 2015
 							p #[a(href="#") Read more about our research ]
 
-						.callout--related
+						//.callout--related
 							h3 If you need more help
 							p Contact the Citizens Advice consumer helpline on 03454 04 05 06 if you need more help - a trained adviser can give you advice over the phone. You can also use an online form or write to them.
 							p If you’re in Northern Ireland, contact Consumerline.
+
+						div
+							h3 I want to...
+							a(href="#").blocklink Do some training
+							a(href="#").blocklink Find someone
+							a(href="#").blocklink Claim expenses
+							a(href="#").blocklink Get help doing my job
+							a(href="#").blocklink Understand the brand
+							a(href="#").blocklink Know about membership
+							a(href="#").blocklink See what events are happening
+
 
 	.fullwidth-yellow
 		.fullwidth-content
