add: move styles for intranet homepage to less files

--- a/libs/jade/dev/site/home-1.jade
+++ b/libs/jade/dev/site/home-1.jade
@@ -9,27 +9,27 @@ extends /template/template-site.jade
 
 block content
 		.main-container
-			.home-first(style="background-color:#f2f8ff;")
+			.home-first-intranet
 				.home__content
 					.flex-container.flex-row
 						.col-md-6.col-sm-12
 							h2 Latest Updates
 							.flex-container.flex-row
 									.col-md-6.col-sm-12
-										.blog-lead
+										.blog-lead-intranet
 											.blog-name
 												p Staff News
 												h3 #[a(href="#") RideLondon-Surrey100 Cycle 2016 ]
-											img(src="../../images/intranet/Pru100-600x400px.png" alt="Image of cyclists" style="width:100%;")
-											p(style="font-size:1rem;") Citizens Advice is looking for 22 committed and enthusiastic cyclists to join our team to take part in the Prudential RideLondon-Surrey 100 on Sunday 31 July 2016.
+											img(src="../../images/intranet/Pru100-600x400px.png" alt="Image of cyclists")
+											p Citizens Advice is looking for 22 committed and enthusiastic cyclists to join our team to take part in the Prudential RideLondon-Surrey 100 on Sunday 31 July 2016.
 									.col-md-6.col-sm-12
-										.blog-lead
+										.blog-lead-intranet
 											.blog-name
 												p Latest Blog
 												h3 #[a(href="#") What we’ve learnt from the phase 2 PQF pilots ]
 												p Jun 14 2016
-											img(src="../../images/intranet/cropleyl_avatar-75x75.jpg" alt="Blog image" style=" float: left; padding-right: 	1rem;")
-											p(style="font-size:1rem;") Many of you have been helping us to test the elements of the performance and quality framework (PQF), with the new approach to quality of advice assessment (QAA) proving ...
+											img.avatar(src="../../images/intranet/cropleyl_avatar-75x75.jpg" alt="Blog image")
+											p Many of you have been helping us to test the elements of the performance and quality framework (PQF), with the new approach to quality of advice assessment (QAA) proving ...
 						.col-md-6.col-sm-12
 							.well(style="background-color:#fff; margin: 1rem;")
 								h3 I want to...
@@ -49,19 +49,19 @@ block content
 						h3 Browse my Citizens Advice
 					.col-md-4.col-sm-12
 						.cards
-							.card-banner-top(style="color:#004b88; background-color:#fff0d3;")
+							.card-banner-top--intranet
 								p Do your job
 							.card-text
 								p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
 					.col-md-4.col-sm-12
 						.cards
-							.card-banner-top(style="color:#004b88; background-color:#fff0d3;")
+							.card-banner-top--intranet
 								p Connect with people
 							.card-text
 								p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
 					.col-md-4.col-sm-12
 						.cards
-							.card-banner-top(style="color:#004b88; background-color:#fff0d3;")
+							.card-banner-top--intranet
 								p Get updated
 							.card-text
 								p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
