--- a/libs/modules/cards.less
+++ b/libs/modules/cards.less
@@ -17,6 +17,17 @@
             font-weight: @font-weight-bolder;
             font-size: @font-size-medium;
         }
+        &--intranet {
+            background-color: @yellow-light;
+            color: @heritage-blue;
+            :first-child {
+                padding: 1rem 0 1rem 1rem;
+                margin: 0;
+                border-radius: @form-border-radius;
+                font-weight: @font-weight-bolder;
+                font-size: @font-size-medium;
+        }
+}
     }
     .card-image-top {
         img {
