--- a/libs/modules/intranet.less
+++ b/libs/modules/intranet.less
@@ -38,6 +38,31 @@
     }
 }
 
+.blog-lead-intranet {
+    .blog-name {
+        p {
+            font-size: @font-size-small;
+            font-weight: @font-weight-base;
+            margin-bottom: 0.5rem;
+            color: @gray-3;
+        }
+        h2, h3 {
+            font-weight: @font-weight-bolder;
+            margin-top: 0;
+            a {
+                border-bottom: none;
+            }
+        }
+    }
+    img {
+        margin: .5rem 0;
+        &.avatar {
+            float: left;
+            padding-right:1rem;
+        }
+    }
+}
+
 /*.customisable button {
     display: block;
     width: 100%;
