--- a/libs/modules/home.less
+++ b/libs/modules/home.less
@@ -20,6 +20,22 @@
     }
 }
 
+.home-first-intranet {
+    background-color: @heritage-blue-lightest;
+    h1 {
+        font-size: 3.3rem;
+        @media (max-width: @screen-xs-max ) {
+            font-size: 2.3rem;
+        }
+    }
+    p {
+        //font-size: @font-size-medium;
+        @media (max-width: @screen-xs-max ) {
+            font-size: @font-size-base;
+        }
+    }
+}
+
 .home-second {
     background-color: @white;
     margin-top: 1em;
