Moved files into top level

--- a/libs/jade/content.jade
+++ b/libs/jade/content.jade
@@ -2,7 +2,7 @@ block settings
 	- var title = "How to fill in your PIP claim form"
 	- var sidebar = true
 	- var toolbars = true
-	- var dir = "../../"
+	- var dir = ""
 
 extends /template/template-site.jade
 
