--- a/libs/jade/home-1.jade
+++ b/libs/jade/home-1.jade
@@ -1,7 +1,7 @@
 block settings
 	- var title = "Volunteering with the Citizens Advice network"
 	- var fullpage = true
-	- var dir = "../../"
+	- var dir = ""
 	- var newfooter = true
 	- var nofooter = true
 
