--- a/libs/jade/home.jade
+++ b/libs/jade/home.jade
@@ -1,7 +1,7 @@
 block settings
 	- var title = "Volunteering with the Citizens Advice network"
 	- var fullpage = true
-	- var dir = "../../"
+	- var dir = ""
 	- var newfooter = true
 	- var nofooter = true
 
@@ -19,7 +19,7 @@ block content
 							h1(style="margin-top:0;") Hello Firstname Lastname
 							p Welcome to the intranet, this is your site for the latest organisational information, news and tools to help you do your best work. If you have any feedback #[a(href="#") let us know].
 							//.home__content-trends
-								h2 Most viewed 
+								h2 Most viewed
 								p #[a(href="#") Employment Support Allowance ]
 								p #[a(href="#") Personal Independence Payment ]
 								p #[a(href="#") Basic rights at work ]
@@ -36,7 +36,7 @@ block content
 			.home__content
 				.flex-container.flex-row
 					div.col-sm-12.col-sm-12
-						h2 Create your homepage								
+						h2 Create your homepage
 						p Click on the plus in the box below or when you visit one of the pages in the site, making it easier to go back to where you go regularly
 					.col-md-4.col-sm-12.blog-sidebar--updates(style="background-color:#B8E3DF; height:100%;")
 						.card-banner-top
