--- a/libs/jade/group.jade
+++ b/libs/jade/group.jade
@@ -1,7 +1,7 @@
 block settings
 	- var title = "Benefits"
 	- var fullpage = true
-	- var dir = "../../"
+	- var dir = ""
 
 extends /template/template-site.jade
 
