--- a/libs/jade/navigation.jade
+++ b/libs/jade/navigation.jade
@@ -1,7 +1,7 @@
 block settings
 	- var title = "Navigation"
 	- var fullpage = true
-	- var dir = "../../"
+	- var dir = ""
 
 extends /template/template-site.jade
 
