--- a/libs/jade/topic.jade
+++ b/libs/jade/topic.jade
@@ -1,7 +1,7 @@
 block settings
 	- var title = "Personal Independence Payment (PIP)"
 	- var fullpage = true
-	- var dir = "../../"
+	- var dir = ""
 
 extends /template/template-site.jade
 
