add: change text

--- a/libs/jade/home-1.jade
+++ b/libs/jade/home-1.jade
@@ -56,7 +56,7 @@ block content
 					.col-md-4.col-sm-12
 						.cards
 							.card-banner-top--intranet
-								p Connect with people
+								p Connect and share
 							.card-text
 								p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
 					.col-md-4.col-sm-12
