change: Renamed nav IDs

--- a/libs/modules/main-nav-beta.less
+++ b/libs/modules/main-nav-beta.less
@@ -192,9 +192,9 @@
 }
 
 #main-nav-beta--search,
-#main-nav-beta--news,
-#main-nav-beta--job,
-#main-nav-beta--org {
+#main-nav-beta--one,
+#main-nav-beta--two,
+#main-nav-beta--three {
 	display: none;
 }
 
@@ -227,9 +227,9 @@
 	}
 }
 
-#main-nav-beta--news,
-#main-nav-beta--job,
-#main-nav-beta--org {
+#main-nav-beta--one,
+#main-nav-beta--two,
+#main-nav-beta--three {
     background-color: @intranet-lightest;
     .content {
         max-width: @breakpoint-lg;
