change: Adjusted page names and content to match email content

--- a/libs/template/template-site.jade
+++ b/libs/template/template-site.jade
@@ -59,7 +59,7 @@ html.no-js
 							a Sign out
 			.navigation
 				.content
-					a.logo(href="#{dir}index.html")
+					a.logo(href="#{dir}home-1.html")
 						img.wide(src="#{dir}images/intranet/MyCA-logo-hz-350px.svg")
 						img.slim(src="#{dir}images/intranet/MyCA-logo-hz-350px.svg")
 
@@ -112,7 +112,7 @@ html.no-js
 					li
 						a(href="") Offices
 					li
-						a(href="") Talent
+						a(href="talent.html") Talent
 					li
 						a(href="") Strategy
 					li
