--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -72,17 +72,19 @@ block content
 					li
 						a(href="modules/charts.html") Charts
 					li
-						a(href="modules/section-notice.html") Section Notices
+						a(href="modules/section-notice.html") Section notices
 					//li
 						a(href="modules/section-notice-dev.html") Section Notice Development
 					li
 						a(href="modules/toolbar.html") Content toolbar
 					li
-						a(href="modules/cookie-monster.html") Cookie Monster
+						a(href="modules/cookie-monster.html") Cookie monster
 					li
 						a(href="modules/browser-warning.html") Browser warning
 					li
 						a(href="modules/sticky.html") Sticky box
+					li
+						a(href="modules/blocklinks.html") Block links
 					//li
 						a(href="modules/extent.html") Extent Switcher
 					//li
