--- a/libs/template/sidebar-modules.jade
+++ b/libs/template/sidebar-modules.jade
@@ -3,12 +3,13 @@
 	{href: "callout.html", title: "Callout"},
 	{href: "revealable.html", title: "Revealable"},
 	{href: "charts.html", title: "Charts"},
-	{href: "section-notice.html", title: "Section Notices"},
+	{href: "section-notice.html", title: "Section notices"},
 	{href: "toolbar.html", title: "Content toolbar"},
-	{href: "cookie-monster.html", title: "Cookie Monster"},
+	{href: "cookie-monster.html", title: "Cookie monster"},
 	{href: "browser-warning.html", title: "Browser warning"},
 	{href: "sticky.html", title: "Sticky box"},
-	{href: "extent.html", title: "Extent Switcher"}
+	{href: "blocklinks.html", title: "Block links"}
+	//{href: "extent.html", title: "Extent switcher"}
 	//{href: "overlay.html", title: "Modal/Overlay"},
 	//{href: "reference.html", title: "Reference tool"}
 ])
