fix: Links urls

--- a/libs/jade/home-1.jade
+++ b/libs/jade/home-1.jade
@@ -20,7 +20,7 @@ block content
 											.blog-name
 												p Staff News
 												h3 #[a(href="#") RideLondon-Surrey100 Cycle 2016 ]
-											img(src="../../images/intranet/Pru100-600x400px.png" alt="Image of cyclists")
+											img(src="#{dir}images/intranet/Pru100-600x400px.png" alt="Image of cyclists")
 											p Citizens Advice is looking for 22 committed and enthusiastic cyclists to join our team to take part in the Prudential RideLondon-Surrey 100 on Sunday 31 July 2016.
 									.col-md-6.col-sm-12
 										.blog-lead-intranet
@@ -28,7 +28,7 @@ block content
 												p Latest Blog
 												h3 #[a(href="#") What we’ve learnt from the phase 2 PQF pilots ]
 												p Jun 14 2016
-											img.avatar(src="../../images/intranet/cropleyl_avatar-75x75.jpg" alt="Blog image")
+											img.avatar(src="#{dir}images/intranet/cropleyl_avatar-75x75.jpg" alt="Blog image")
 											p Many of you have been helping us to test the elements of the performance and quality framework (PQF), with the new approach to quality of advice assessment (QAA) proving ...
 						.col-md-6.col-sm-12
 							.well(style="background-color:#fff; margin: 1rem;")
