change: Updated adjusted content

--- a/libs/jade/talent.jade
+++ b/libs/jade/talent.jade
@@ -28,7 +28,19 @@ block content
 							.blog-name
 								p Browse talent content
 						.group-index-list
+							h3 #[a(href="") New joiners]
+						.group-index-list
+							h3 #[a(href="") Recruitment]
+						.group-index-list
+							h3 #[a(href="") Performance management]
+						.group-index-list
+							h3 #[a(href="") Pay and benefits]
+						.group-index-list
 							h3 #[a(href="volunteers.html") Volunteers]
+						.group-index-list
+							h3 #[a(href="") Porblems at work]
+						.group-index-list
+							h3 #[a(href="") Leavers]
 
 
 					div.col-sm-4.col-sm-12
