--- a/libs/template/template-site.jade
+++ b/libs/template/template-site.jade
@@ -66,16 +66,16 @@ html.no-js
 					ul
 						li#one
 							a(href="#")
-								span Do&nbsp;
-								span your&nbsp;job
+								span Your&nbsp;
+								span job
 						li#two
 							a(href="#")
-								span Connect&nbsp;
-								span and&nbsp;share
+								span Your&nbsp;
+								span connections
 						li#three
 							a(href="#")
-								span Get&nbsp;
-								span updated
+								span Your&nbsp;
+								span updates
 						li#search-toggle
 							a(href="#")
 								i.icon-search
@@ -96,25 +96,25 @@ html.no-js
 			.content
 				ul
 					li
-						a(href="") Advice
-					li
 						a(href="") Brand
 					li
 						a(href="") Campaigns
 					li
 						a(href="") Equality
 					li
+						a(href="") Facilities
+					li
 						a(href="") Finance
+					li
+						a(href="") Governance
 					li
 						a(href="") Learning
 					li
+						a(href="") Advice
+					li
 						a(href="") Membership
 					li
-						a(href="") Offices
-					li
 						a(href="talent.html") Talent
-					li
-						a(href="") Strategy
 					li
 						a(href="") Technology
 
