--- a/libs/jade/volunteers.jade
+++ b/libs/jade/volunteers.jade
@@ -8,7 +8,7 @@ extends /template/template-site.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Do your job", href: dir + "home-1.html"},
-		{title: "Talent", href: dir + "home-1.html"},
+		{title: "Talent", href: dir + "talent.html"},
 		{title: title}])
 
 block content
