add: navigation menu section

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -91,7 +91,12 @@ block content
 						a(href="modules/reference.html") Reference tool
 
 			.span3-md.span6-sm
-				h3#Branding(style="margin-top: 0;") Branding
+				h3#Navigation(style="margin-top: 0;") Navigation
+				ul
+					li
+						a(href="navigation/blocklinks.html") Block links
+
+				h3#Branding Branding
 				ul
 					li
 						a(href="branding/brand-icons.html") Brand icons
