dev:add: Added adviser links to topic

--- a/libs/jade/dev/site/topic.jade
+++ b/libs/jade/dev/site/topic.jade
@@ -22,6 +22,15 @@ block content
 		.flex-container.flex-row
 			.col-md-8.col-sm-12
 				.contents-page__section
+					h2 Sick pay
+					p #[a(href="#") Check if you’re entitled to sick pay]
+					p #[a(href="#") How to get sick pay]
+					p #[a(href="#") Getting money when you’re off work sick]
+					p #[a(href="#") Getting sick pay when you’re pregnant]
+					.callout--adviser
+						p #[a(href="#") Contractual sick pay]
+
+				.contents-page__section
 					h2 Before you claim PIP
 					p #[a(href="#") Check if you’re eligible for PIP]
 					p #[a(href="#") PIP: presence, residence and length of condition rules]
