add: update homepage and structure to include features and navigation sections

--- a/libs/jade/features/cookie-monster.jade
+++ b/libs/jade/features/cookie-monster.jade
@@ -9,11 +9,11 @@ extends /template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: dir + "index.html"},
-		{title: "Modules", href: dir + "index.html#Modules"},
+		{title: "Modules", href: dir + "index.html#Features"},
 		{title: "Cookie Monster"}])
 
 block sidebar
-	include /template/sidebar-modules.jade
+	include /template/sidebar-features.jade
 
 block content
 	.articleContent
