--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -47,6 +47,8 @@ block content
 						a(href="styles/icons.html") Icons
 					li
 						a(href="styles/tables.html") Tables
+					li
+						a(href="styles/charts.html") Charts
 
 			.span3-md.span6-sm
 				h3#Forms(style="margin-top: 0;") Forms
@@ -69,26 +71,28 @@ block content
 						a(href="modules/callout.html") Callout
 					li
 						a(href="modules/revealable.html") Revealable
-					li
-						a(href="modules/charts.html") Charts
-					li
-						a(href="modules/section-notice.html") Section Notices
 					//li
 						a(href="modules/section-notice-dev.html") Section Notice Development
 					li
 						a(href="modules/toolbar.html") Content toolbar
 					li
-						a(href="modules/cookie-monster.html") Cookie Monster
-					li
-						a(href="modules/browser-warning.html") Browser warning
-					li
 						a(href="modules/sticky.html") Sticky box
-					li
-						a(href="modules/extent.html") Extent Switcher
 					//li
 						a(href="modules/overlay.html") Modal/Overlay
+
+				h3#Features Features
+				ul
+					li
+						a(href="features/section-notice.html") Section Notices
+					li
+						a(href="features/cookie-monster.html") Cookie Monster
+					li
+						a(href="features/browser-warning.html") Browser warning
+					li
+						a(href="features/extent.html") Extent Switcher
 					//li
 						a(href="modules/reference.html") Reference tool
+
 
 			.span3-md.span6-sm
 				h3#Navigation(style="margin-top: 0;") Navigation
