--- a/libs/template/sidebar-styles.jade
+++ b/libs/template/sidebar-styles.jade
@@ -3,5 +3,7 @@
 	{title: "Typography", href: "typography.html"},
 	{title: "Colours", href: "colours.html"},
 	{title: "Icons", href: "icons.html"},
-	{title: "Tables", href: "tables.html"}
+	{title: "Tables", href: "tables.html"},
+    {title: "Charts", href: "charts.html"}
+
 ])
