--- a/libs/jade/features/browser-warning.jade
+++ b/libs/jade/features/browser-warning.jade
@@ -8,11 +8,11 @@ extends /template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: dir + "index.html"},
-		{title: "Modules", href: dir + "index.html#Modules"},
+		{title: "Features", href: dir + "index.html#Features"},
 		{title: "Browser warning"}])
 
 block sidebar
-	include /template/sidebar-modules.jade
+	include /template/sidebar-features.jade
 
 block content
 	.articleContent
