--- a/libs/jade/features/extent.jade
+++ b/libs/jade/features/extent.jade
@@ -9,11 +9,11 @@ extends /template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: dir + "index.html"},
-		{title: "Modules", href: dir + "index.html#Modules"},
+		{title: "Features", href: dir + "index.html#Features"},
 		{title: "Extent switcher"}])
 
 block sidebar
-	include /template/sidebar-modules.jade
+	include /template/sidebar-features.jade
 
 block script
 	script.
