dev: Added 5 columns to the index SimplyGrid.

--- a/libs/guide.less
+++ b/libs/guide.less
@@ -1721,3 +1721,18 @@ div.tooltip:before {
         content: @brand-wine;
     }
 }
+
+.index-row-1 {
+    .col(3,5,780px);
+    .index-col {
+        .col(1,3,480px);
+    }
+}
+
+.index-row-2 {
+    .col(2,5,780px);
+    .index-col {
+        .col(1,3,480px);
+        .col(1,2,780px);
+    }
+}
